# Conflict-sentiment-analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
src/conflict_sentiment/: __init__.py  cli.py  config.py  logging_utils.py
src/conflict_sentiment/analysis/: __init__.py  publisher.py  temporal.py  wordfreq.py
src/conflict_sentiment/data/: __init__.py  cleaner.py  loader.py
src/conflict_sentiment/pipelines/: __init__.py  run_sentiment.py  run_topics.py
src/conflict_sentiment/preprocessing/: __init__.py  nltk_setup.py  text.py
src/conflict_sentiment/sentiment/: __init__.py  base.py  registry.py  textblob_engine.py  transformer_engine.py  vader_engine.py
src/conflict_sentiment/topics/: __init__.py  lda.py
src/conflict_sentiment/visualization/: __init__.py  plots.py  wordclouds.py
tests/: conftest.py  test_analysis.py  test_cleaner.py  test_data_loader.py  test_sentiment_engines.py  test_text_preprocessing.py  test_topics.py
